修改忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 
 # Xcode
 #
+*.vscode
+*.lock
+*.git
+*.gitignore
 build/
 *.pbxuser
 !default.pbxuser
@@ -29,7 +33,6 @@ build/
 .gradle
 local.properties
 *.iml
-
 # node.js
 #
 node_modules/
